--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -151,7 +151,7 @@ London Sym/Kertesz & London NA
 When this symphony became available on LP (Kertesz, 1967) Ray Minshull wrote glowing notes,
 praising the work to the skies (``outstanding achievement...magnificent road sweep...an abundance
 of vintage-type Dvořák themes...remind one of Tchaikovsky''). 
-Now it's true that in those days prospective yers could read the liner notes
+Now it's true that in those days prospective buyers could read the liner notes
 on the back the album, and maybe Mr Minshull was ``laying it on''
 to sell an utterly unknown work. But those of us who fell for it were
 sorely disappointed. It is a dull and boring symphony without any 
@@ -179,14 +179,14 @@ London Sym/Kertesz & London NA
 
 \section{Symphony 3}
 
-This one came eight years after the first two, and it was performed: Simetana led
+This one came eight years after the first two, and it was performed: Smetana led
 the Prague Philharmonic. It's the only Dvořák symphony with only three movements. 
 The middle one is his longest slow movement. It's basically a theme and variations,
 but the theme gives birth to themelets. In the middle of it a catchy march-like
 section in pure Dvořák rhythm (dum, dum, dum-da-DUM-dum) acts as a scherzo.
-It builds up, then sub-sides; but it returns slower and quieter in the coda
+It builds up, then subsides; but it returns slower and quieter in the coda
 of the movement. Dvořák still hasn't written a good slow movement, 
-but there is a sort of genius in the way this is organized-and you'll never forget that march.
+but there is a sort of genius in the way this is organized---and you'll never forget that march.
 
 The opening movement has wonderful flow and warmth; you are hooked right from the start. And the finale has an excitement and drive that will remind you of Schubert's Ninth.
 Dvořák has Schubert's light-hearted playful-ness, too. Still, the orchestration of this symphony is sumptuous, almost Wagnerian. But, Schubert and Wagner aside, Dvořák always sounds only like Dvořák---he could never be mistaken for anyone else. And he loved this symphony all his life. Brahms loved it, too, and thought it worthy of the Austrian State Prize.
@@ -265,7 +265,7 @@ Milwaukee/Macal & Koss 1026
 
 \section{Symphony 6}
 
-This one was written for Hans Richter and the Vienna Phiharmonic in 1880, but the first performance took place in Prague, and it took the Vienna Philharmonic a long time to get around to it (though Richter conducted it often in other cities). It is in the same key as the Brahms Second, but its opening resembles the Brahms Fourth---and it's another brilliant opening that ``hooks'' the listener right away. II is sweet and gentle, and near the end we hear a hint of the quiet violin solo near the end of Also Sprach Zarathustra. The scherzo has the usual Dvořák rhythmic vigor, and the trio is serene.
+This one was written for Hans Richter and the Vienna Philharmonic in 1880, but the first performance took place in Prague, and it took the Vienna Philharmonic a long time to get around to it (though Richter conducted it often in other cities). It is in the same key as the Brahms Second, but its opening resembles the Brahms Fourth---and it's another brilliant opening that ``hooks'' the listener right away. II is sweet and gentle, and near the end we hear a hint of the quiet violin solo near the end of Also Sprach Zarathustra. The scherzo has the usual Dvořák rhythmic vigor, and the trio is serene.
 The final movement is happy and untroubled.
 
 For some reason, Kubelik takes longer over that last movement than anyone else. His tempos are varied more; some parts are faster than most conductors. The Berlin Philharmonic is simply unbeatable. The Kubelik remains a very exciting and dramatic recording---almost a lesson in great conducting: how to make the details count while building a whole structure that makes sense and reaches all the peaks. He has a lot of fire, but there are also a lot of drastic tempo shifts.
@@ -275,13 +275,13 @@ He also has the best sound of any-absolutely and without doubt. Kertesz is more 
 
 Libor Pešek, who impressed us so much in a number of the other symphonies, leaves us cold in this one. (Why is it that no one seems to do them all well?) The sound is a little distant this time, and the conductor seems to float thru the music---misses a lot of points that Kubelik and Kertesz facilitate. Those two conductors are more cumulative-know how to build a climax. They are also more coherent, more stirring, more heady-more of a total experience (I include Bělohlávek in this description). It's the same Czech Philharmonic that plays for Bělohlávek, and they sound very good, but Bělohlávek has figured this symphony out and Pešek has not.
 
-Another Czech Philharmonic recording---with Ancerl---promises a lot but lets us down.
+Another Czech Philharmonic recording---with Ančerl---promises a lot but lets us down.
 For some reason the conducting is brusque and routine, with very little shaping.
 Neumann's 1982 recording---the one readily available right now---is quite beautiful.
 The sound is not as appealing as the Bělohlávek,
 unless you like it cleaner (as opposed to warmer), but those Czech Philharmonic violins are something special. It, like the rest of his series, is in a box with two other symphonies: 4 and 5.
 
-Macal is pretty straightforward, with little tempo manipulation. I is strong and lite, tough but with sensitive detail---very appealing. II is very lovely and makes the Järvi sound insensitive. IV is as exciting as it gets. The Milwaukee Symphony again plays beautifully, and the sound is demonstration-class Jan/Feb 1990). The Cleveland Orchestra also sounds wonderful for Dohnanyi, and his II is just right. We decided that the conductor and the engineering overdramatize the music (Nov/ Dec 1991). The Rowicki---along with his 5---is excellent, but the sound is 1960s and not up to Kertesz, let alone Bělohlávek. The Suitner was reviewed as ``energetic but ordinary''. Slatkin has the slowest II and comes in an expensive box set available only from the St Louis Symphony. Tom Godell considers it the best 6th ever, and I remember it as one of the best. Another specific criticism of the Järvi is that his tempo in IV is cranked up too far---the orchestra has trouble with it, too Jan/Feb 1988---Haller). Beyond that, it just seems generally inferior to the ones we recommend.
+Macal is pretty straightforward, with little tempo manipulation. I is strong and lite, tough but with sensitive detail---very appealing. II is very lovely and makes the Järvi sound insensitive. IV is as exciting as it gets. The Milwaukee Symphony again plays beautifully, and the sound is demonstration-class Jan/Feb 1990). The Cleveland Orchestra also sounds wonderful for Dohnanyi, and his II is just right. We decided that the conductor and the engineering overdramatize the music (Nov/ Dec 1991). The Rowicki---along with his 5---is excellent, but the sound is 1960s and not up to Kertesz, let alone Bělohlávek. The Suitner was reviewed as ``energetic but ordinary''. Slatkin has the slowest II and comes in an expensive box set available only from the St Louis Symphony. Tom Godell considers it the best 6th ever, and I remember it as one of the best. Another specific criticism of the Järvi is that his tempo in IV is cranked up too far---the orchestra has trouble with it, too (Jan/Feb 1988---Haller). Beyond that, it just seems generally inferior to the ones we recommend.
 
 \st
 Czech Phil/Bělohlávek & Chandos 9170\\
@@ -299,7 +299,7 @@ Other eminent critics have called it profusely inspired and a great symphony by 
 
 It is also his most Brahmsian. It took him only three months to write it---not surprising, considering the level of inspiration. Some people hear hints of two great themes in it: the second theme in I resembles the beautiful cello solo in the Second Brahms Piano Concerto, and in II one spot sounds like the love duet from Tristan and Isolde. (To me it all sounds like Brahms, not Wagner.) The Scherzo trips along lightly and cheerfully; conductors are inclined to over-inflect it, but it's really a prime example of the natural flow of Dvořák's music. Yet there is passion in this symphony, and that can be slighted as well. It's not an easy work to get right.
 Suitner's 7 is forceful, with sharp attacks
-and little charm-sinewy and intense rather than graceful. Giulini on EMI is almost the other extreme: only mildly engaging, a run-through. (The Chicago Symphony has made available a far better Giulini 7th; see Nov/Dec 1996 and July/Aug 1994.) Giulini is a maddeningly inconsistent conductor. There was a Giulini on DG. It was better conducted than the EMI or Sony, but the sound was not great. The Sony Giulini (Concertgebouw) is very slow and ponderous, with no energy or pulse. Jansons has plenty of that, but he doesn't slow down for the appealing parts-goes flying right thru them---and III sounds half-hearted. Colin Davis is rather cold emotionally and gets rather cold sound, too. He achieves tremendous drive and clarity, but he refuses to linger over anything---and Dvořák gives us plenty to linger over.
+and little charm-sinewy and intense rather than graceful. Giulini on EMI is almost the other extreme: only mildly engaging, a run-through. (The Chicago Symphony has made available a far better Giulini 7th; see Nov/Dec 1996 and July/Aug 1994.) Giulini is a maddeningly inconsistent conductor. There was a Giulini on DG. It was better conducted than the EMI or Sony, but the sound was not great. The Sony Giulini (Concertgebouw) is very slow and ponderous, with no energy or pulse. Jansons has plenty of that, but he doesn't slow down for the appealing parts---goes flying right thru them---and III sounds half-hearted. Colin Davis is rather cold emotionally and gets rather cold sound, too. He achieves tremendous drive and clarity, but he refuses to linger over anything---and Dvořák gives us plenty to linger over.
 
 The Marriner seems perverse: he rushes thru all the big tunes and slows down where there is no reason to. II is breathless, and the Minnesota Orchestra is decidedly mediocre.
 Minnesota Orchestra is decidedly mediocre.
@@ -316,13 +316,17 @@ It still stands up very well next to everything that's been
 done since, but for sheer beauty of sound it is not quite in the very top group.
 Gunzenhauser on Naxos is warm and satisfying but somewhat low-key, a decent introduction
 to the work if you are on a budget.
+
 The Dorati is actually quite good, but the Mercury sound is somewhat tinny. Tempos are close to ideal. From the same period there was a Barbirolli that I find unbearable: the conductor is at a total loss in Dvořák. He is blatant, has no subtlety: everything is on the same obvious level. There is no flow, no cumulative effect. Everything is heavy-handed. The orchestra is terrible. It's a shame that EMI brought this piece of dreck to CD: the orchestra simply couldn't cope with the music.
 Dozens of American orchestras play it better.
 But EMI's recording will win no prizes either: hard, crude sounds too close-up---a
 flute louder than a whole string section. The Kosler is also pretty old,
 but it's a genial, well-inflected account.
+
 Zdenek Macal again delivers excitement---in spades---and Koss delivers gorgeous sound.
-II and IlI are the fastest around, and they sound driven. The music has been deprived of its natural flow, and this is an eccentric version--for people who like things fast. Another conductor who drives things too hard is Chung on BIS. The Scherzo sounds more like Beethoven than Dvořák, and the orchestra is nowhere near as good as Milwaukee. James Levine's 7th also seems hard-driven: excitement at the expense of the music's emotional range. What Monteux had was both---along with a very nice sound from the London Symphony. There is no particular need for the Monteux with so many fine---and better-sounding---recordings on the market, but Steven Haller is not the only ARG reviewer who reveres it. Nor do we really need the 1963 Bernstein, just reissued. It is exciting and passionate, but so are many far better---played and---recorded ones (actually, the sound is vastly improved on CD). The Ormandy was better recorded (RCA), but Ormandy was not good at Dvořák.
+II and III are the fastest around, and they sound driven.
+The music has been deprived of its natural flow, and this is an eccentric version--for people who like things fast. Another conductor who drives things too hard is Chung on BIS.
+The Scherzo sounds more like Beethoven than Dvořák, and the orchestra is nowhere near as good as Milwaukee. James Levine's 7th also seems hard-driven: excitement at the expense of the music's emotional range. What Monteux had was both---along with a very nice sound from the London Symphony. There is no particular need for the Monteux with so many fine---and better-sounding---recordings on the market, but Steven Haller is not the only ARG reviewer who reveres it. Nor do we really need the 1963 Bernstein, just reissued. It is exciting and passionate, but so are many far better---played and---recorded ones (actually, the sound is vastly improved on CD). The Ormandy was better recorded (RCA), but Ormandy was not good at Dvořák.
 
 Andrew Davis does nothing with the music, and the sound is distant, cloudy, and screechy (all!). Another bad recording job is the EMI Sawallisch---but part of the problem is certainly the decline of the Philadelphia Orchestra: the violins are scrappy, scrawny, and tinny. There is no blend or warmth.
 
@@ -584,7 +588,7 @@ it's excellent.
 
 Karel Sejna was a generation earlier than
 Neumann and recorded these in 1959; the bass is weak, but the overall sound is pretty good.
-Carl Bauman freely mentions Sejna in the same breath with Talich and Ancerl. And Lawrence Hansen calls the Sejna recording colorful, idiomatic, and exciting. Another Czech conductor who found this music natural was Zdenek Kosler. He holds his own against the heady Neumann, the more elegant Kubelik (just reissued by DG), and the manic but tightly-focussed Szell. As Lawrence Hansen told us, these are rip-snorting performances full of gusto and flair, with a big, gutsy orchestral sound. They have a lot of energy, vitality, joy, and freedom.
+Carl Bauman freely mentions Sejna in the same breath with Talich and Ančerl. And Lawrence Hansen calls the Sejna recording colorful, idiomatic, and exciting. Another Czech conductor who found this music natural was Zdenek Kosler. He holds his own against the heady Neumann, the more elegant Kubelik (just reissued by DG), and the manic but tightly-focussed Szell. As Lawrence Hansen told us, these are rip-snorting performances full of gusto and flair, with a big, gutsy orchestral sound. They have a lot of energy, vitality, joy, and freedom.
 
 The Segerstam on BIS has good sound---especially bass---and some original ideas. Fasts seem faster than usual and slows slower. Still, the orchestra isn't world-class. We found the
 Maazel boring (July/Aug 1989 covers that and four others). There is plenty of vigor in the recording Dorati made in his 80th year (Vox-Mar/Apr 1998), and readers who like that conductor will respond to his two earlier recordings as well; but most of us wouldn't list Dorati among the top recommendations.
@@ -653,20 +657,20 @@ Pešek & Virgin 59522
 
 \section{String Serenade}
 
-The title and the music suggest a music: evening in an aristocratic drawing room. It courtly music---quite elegant---and only lets go a little in the final movement (of five). This is the earliest Dvorak composition (1875) that almost any listener will be enchanted by. (I don't mean to detract from the early symphonies---I like them very much.)
+The title and the music suggest a music: evening in an aristocratic drawing room. It courtly music---quite elegant---and only lets go a little in the final movement (of five). This is the earliest  Dvořák composition (1875) that almost any listener will be enchanted by. (I don't mean to detract from the early symphonies---I like them very much.)
 
 The Prague Chamber Orchestra (without conductor) slogs thru this with no spirit at all.
 The Prague Soloists are rather stiff and formal.
 The Suk Chamber Orchestra on Supraphon is very disappointing: tiny group, miked too close-up. Gilbert French trounced the Golub---no character, with plodding rhythms and spongy pacing---and liked the Archetype recording by the Metamorphosen Chamber Orchestra (J/F 1998), and John McKelvey liked the one led by Jaime Laredo (exquisite, satisfying---Jan/Feb 1992). Others of us found it too laid-back. Jordan is delicate, sensitive, and touching, but the violins can be shrill (miked too close).
 
-Ashkenazy (with the Cleveland Orchestra) was rather dry and even heavy. Belohlavek is full of irritating exaggerations. The opening Moderato is a dirge; the Scherzo flies by much too fast. The chamber orchestra (it's not the Czech Philharmonic) doesn't sound that good, either.
+Ashkenazy (with the Cleveland Orchestra) was rather dry and even heavy. Bělohlávek is full of irritating exaggerations. The opening Moderato is a dirge; the Scherzo flies by much too fast. The chamber orchestra (it's not the Czech Philharmonic) doesn't sound that good, either.
 
 The Karajan was one of the first CDs, and apparently DG has never reissued it at a lower price. It's still in the catalog, but the interpretation is almost nasty, as if he resented having to do it. The sound as less than ideal (steely strings with no blend), the rhythms stiff and square. It's heartless, stern, and severe.
 
 Among records that couple the two serenades, Teldec's (St Paul/Hugh Wolff) has rather cool sound, with little ambience.
 
-The Granada Chamber Orchestra on Claves is very heartfelt and intense, and though they are not perfectly together all the time, they make such a nice sound that it's hard to resist. They join the Dvorak with the Suk and Janacek equivalents, so you hear the development of the Czech string serenade.
-Naxos also gives us the Suk serenade with the Dvorak; both are marvelous performances in gorgeous sound. The Editor is not alone in finding the Naxos the best available at any price. What a joy after Karajan!
+The Granada Chamber Orchestra on Claves is very heartfelt and intense, and though they are not perfectly together all the time, they make such a nice sound that it's hard to resist. They join the  Dvořák with the Suk and Janacek equivalents, so you hear the development of the Czech string serenade.
+Naxos also gives us the Suk serenade with the  Dvořák; both are marvelous performances in gorgeous sound. The Editor is not alone in finding the Naxos the best available at any price. What a joy after Karajan!
 
 As we write this, EMI is about to release---for the first time on CD--the 1975 Stokowski.
 It is very unusual---not like any other recording. It is gratifying to have a full string section instead of a mere chamber orchestra, and Stokowski certainly knew what to do with strings. As you would expect, the nuances and expressive devices are many and effective. I have this on cassette, so it is hard to say what the CD will sound like, but I expect to acquire it by hook or by crook.
@@ -698,12 +702,12 @@ Karajan & DG 447434
 
 \section{Symphonic Variations}
 
-The first performance did not cause much of a stir, but when Dvorak himself conducted it ten years later, the audience loved it. Then Hans Richter took it to London and reported to Dvorak that ``in the hundreds of concerts I have conducted, no novelty has had such a success''.
+The first performance did not cause much of a stir, but when  Dvořák himself conducted it ten years later, the audience loved it. Then Hans Richter took it to London and reported to  Dvořák that ``in the hundreds of concerts I have conducted, no novelty has had such a success''.
 Brahms had introduced the form with his Haydn Variations, and there are similarities.
 These are 28 variations on his own theme—a song called 'I am a Fiddler'. The first three variations merely repeat the theme with some fancy adornment and counterpoint.
-Then the real fun starts: in the next 13 variations (4-16) he plays with it much as a dog might play with its puppy, turning it on its back and rolling it all over the place, licking it affectionately and slapping it when it becomes too obstreperous (description in the Gervase Hughes book on Dvorak). Variation 17 changes the time-signature, 18 changes the key, and 19
+Then the real fun starts: in the next 13 variations (4-16) he plays with it much as a dog might play with its puppy, turning it on its back and rolling it all over the place, licking it affectionately and slapping it when it becomes too obstreperous (description in the Gervase Hughes book on  Dvořák). Variation 17 changes the time-signature, 18 changes the key, and 19
 introduces a waltz tune that hardly seems
-related to what has come before. That then becomes the basis for a subsidiary set of seven variations (20-26). Variation 27 brings us back to earth with the opening theme, and in Variation 28 it becomes a fugue-with a polka in the middle! Dvorak was very happy with this work, and it showed the world what he was capable of. But while he was enjoying his compositional prowess he lost his last two children to disease.
+related to what has come before. That then becomes the basis for a subsidiary set of seven variations (20-26). Variation 27 brings us back to earth with the opening theme, and in Variation 28 it becomes a fugue-with a polka in the middle!  Dvořák was very happy with this work, and it showed the world what he was capable of. But while he was enjoying his compositional prowess he lost his last two children to disease.
 Our reviewer found the Järvi ``very good but perhaps not quite good enough to overcome the inherent ennui of this work'' J/F 1993). And that's the way most performances come across: you blame the music, because all seems well played. But you should always be suspicious in such circumstances; someday a conductor will come along who will make sense of the music and reveal it to be amazingly appealing. Recordings of 11 conductors are listed at the moment, and we don't like most of them. We were kindest to Sawallisch. But the one who reveals this piece for what it is is Macal: very Czech, with natural flow and plenty of vitality and simply gorgeous playing and sound.
 
 \st
@@ -712,7 +716,7 @@ Macal & Koss 1024
 
 \section{Violin Concerto}
 
-Why Dvorak's lovely violin concerto is not as popular as Mendelssohn's or Tchaikovsky's is hard to explain. It has melody, and its music is stirring. It may not be enough of a display piece. Or the answer may simply be lack of familiarity. We are sure that if people were familiar with it they would like it. It has come into its own on CD, where there are now around 25 recordings, including Stern and Suk/Ančerl from LP days. (EMI also issued one of the two Milstein recordings in 1994---Mar/Apr Collections. A number of our writers liked Milstein in this work.) We did not like the Teldec Zehetmair, but that seems to be deleted now.
+Why  Dvořák's lovely violin concerto is not as popular as Mendelssohn's or Tchaikovsky's is hard to explain. It has melody, and its music is stirring. It may not be enough of a display piece. Or the answer may simply be lack of familiarity. We are sure that if people were familiar with it they would like it. It has come into its own on CD, where there are now around 25 recordings, including Stern and Suk/Ančerl from LP days. (EMI also issued one of the two Milstein recordings in 1994---Mar/Apr Collections. A number of our writers liked Milstein in this work.) We did not like the Teldec Zehetmair, but that seems to be deleted now.
 On purely technical grounds, Kyung-Wha Chung hasn't found the Czech idiom, and in I she is bland, harsh, and exaggerated all at once. Her III is really dull---and that's not easy to accomplish. Muti's accompaniment is leaden. Mintz takes a funereal tempo in I, and his III is also pretty dull—not helped by James Levine. Accardo is better, but the accompaniment is again less than ideal. Midori has momentum, energy, and presence; she is always lively. Mehta is an expert accompanist, and Sony supplies great sound.
 
 Suk/Ančerl has long been recognized by most of us as the paradigm: this is how it
@@ -721,20 +725,20 @@ Suk also recorded it later (in 1978) with Neumann; the conducting is a little la
 There's nothing wrong with the Stern/Ormandy—though it is pretty old by now---but Uto Ughi and Leonard Slatkin had much the same sound and approach in their 1991 RCA recording (deleted?). II is simple and direct, never exaggerated or finicky, but certainly affectionate. III is exciting here—a real furiant.
 
 \st
-Suk/Ancerl & Sup 0601\\
+Suk/Ančerl & Sup 0601\\
 Ughi/Slatkin & RCA 60431\\
 Suk/Neumann & Supraphone NA
 \et
 
 \section{Cello Concerto}
 
-Dvorak wrote this in New York, but it was first performed in London. He got some advice from a cello professor in Prague; but that gentleman wanted a much more virtuoso piece, and Dvorak resisted many of his suggestions, writing something closer to a romantic epic. It is warm and lush and lets us enjoy the cello's richest tones.
+ Dvořák wrote this in New York, but it was first performed in London. He got some advice from a cello professor in Prague; but that gentleman wanted a much more virtuoso piece, and  Dvořák resisted many of his suggestions, writing something closer to a romantic epic. It is warm and lush and lets us enjoy the cello's richest tones.
 
 Since we will be dealing with this in a later overview (of cello concertos) we will not go into detail here. The Starker/Dorati is cold, but when Starker redid it 30 years later with Slatkin in St Louis, everything was better. It's certainly more spacious and relaxed, though Starker is hardly an emotional player at the best of times. Julian Lloyd Webber seems rather restrained and straightforward. Maisky was accompanied by Bernstein in a tortured, indulgent reading totally at odds with the spirit of the music. We did not respond favorably to Ofra Harnoy's recording (Mar/Apr 1996).
 
 Miklos Perenyi has been the leading cellist in Hungary for a long time, and his Hungaroton recording---with Ivan Fischer and the excellent Budapest Festival Orchestra---has lots of charm and warmth (not listed in Schwann at the moment, but that could be an oversight. The number is 12868). The Wallfisch recording on Chandos is pleasant enough but mainly valuable for its great coupling: Dohnanyi (Sept/Oct 1989).
 
-Fournier and Szell (Berlin Philharmonic) are still hard to beat: Szell's icy brilliance often catches fire, and the Berlin violins are to die for. Beyond that, we must recommend one of Rostropovich's recordings: he has affected almost every interpreter since with his very personal reading and ravishing sound. His recordings with Ancerl, Karajan, and Ozawa were especially good. The third artist to consider seriously is Yo-yo Ma: his recent Sony recording with Masur and the New York Philharmonic sounds as good and has as much individuality as the Rostropovich/Ozawa. The expression is rich and varied, the tone gorgeous (coupled with the Victor Herbert concerto, which inspired Dvorak to write his).
+Fournier and Szell (Berlin Philharmonic) are still hard to beat: Szell's icy brilliance often catches fire, and the Berlin violins are to die for. Beyond that, we must recommend one of Rostropovich's recordings: he has affected almost every interpreter since with his very personal reading and ravishing sound. His recordings with Ančerl, Karajan, and Ozawa were especially good. The third artist to consider seriously is Yo-yo Ma: his recent Sony recording with Masur and the New York Philharmonic sounds as good and has as much individuality as the Rostropovich/Ozawa. The expression is rich and varied, the tone gorgeous (coupled with the Victor Herbert concerto, which inspired  Dvořák to write his).
 
 Finally, it you prefer the quieter emotions, Christine Walevska has them, along with plenty of singing tone. She is never flamboyant or indulgent like Rostropovich, but the everyday comfort level of her recording is very high, and the sound (Philips, 1971) is still beautiful.
 
@@ -747,18 +751,18 @@ Walevska/Gibson & IMP 9035
 
 \section{Piano Concerto}
 
-In Alec Robertson's book on Dvorak, after calling the violin concerto warm-hearted, he says that the piano concerto has cold feet. Dvorak seemed afraid that the piano writing would not be effective, so like someone learning 10 cook he weighed out the ingredients fairly accurately but mixed them with a heavy hand.
+In Alec Robertson's book on  Dvořák, after calling the violin concerto warm-hearted, he says that the piano concerto has cold feet.  Dvořák seemed afraid that the piano writing would not be effective, so like someone learning 10 cook he weighed out the ingredients fairly accurately but mixed them with a heavy hand.
 Robertson calls the score ``a warning to young
-composers''. He goes on to say that it is impossible for Dvorak to write for long without disarming us with a charming phrase, but in this concerto such phrases are immediately smothered in notes by the piano. 
+composers''. He goes on to say that it is impossible for  Dvořák to write for long without disarming us with a charming phrase, but in this concerto such phrases are immediately smothered in notes by the piano. 
 ``In the slow movement asphyxia almost sets in.'' 
-To top it all off, it' s unpianistic. Robertson concludes that it will never take a place in the repertory---or even in the Dvorak canon. 
+To top it all off, it' s unpianistic. Robertson concludes that it will never take a place in the repertory---or even in the  Dvořák canon. 
 
 The Editor heartily agrees and could live cheerfully the rest of his life without this music. Both outer movements are pretty boring, no matter who plays them. The middle movement is a tender piano-and-strings meditation.
 
 If we start with A again, there's a recording by Igor Ardasev that we found listless and dull.
 Also on Supraphon there is---or was---Ivan Moravec: very alive where Ardasev is half dead—and intense enough to convince us that this concerto is a neglected masterpiece. (But that is an illusion—it is not.)
 
-We like the Naxos recording by Jeno Jando, who is a really wonderful pianist---and is accompanied by a wonderful orchestra (coupled with the Editor's favorite performance of {\it The Water Goblin}). Justus Frantz recorded this three times-with Muller-Brühl, Bernstein, and Belohlavek---and one of them is always around. He is eminently suited to the music, and he makes I almost rhapsodic! There have also been three Richter recordings; the two available right now are in---concert ones. The one with Kleiber is not around right now;
+We like the Naxos recording by Jeno Jando, who is a really wonderful pianist---and is accompanied by a wonderful orchestra (coupled with the Editor's favorite performance of {\it The Water Goblin}). Justus Frantz recorded this three times-with Muller-Brühl, Bernstein, and Bělohlávek---and one of them is always around. He is eminently suited to the music, and he makes I almost rhapsodic! There have also been three Richter recordings; the two available right now are in---concert ones. The one with Kleiber is not around right now;
 Steven Haller thinks it's the best recording this music has had. Carl Bauman, who also loves this concerto, prefers Rudolf Firkusny above all---as does Mark Koldys.
 
 \st
@@ -770,7 +774,7 @@ Richter & NA
 \section{Quartets}
 
 The Chilingirian Quartet is bright and engaging but not idiomatic. In works with a strong Slavic flavor like 10 and 12 they offer no wit and little charm. The Alban Berg Quartet gives light and joyous readings of 12 and 13, but again they are not very idiomatic.
-In the quartets (especially the essential later ones, 10-14) three groups stand out above the others. The best---at full price-is the Stamitz Quartet on Bayer. They dig into the music with a power and sense of involvement unmatched on discs. Their playing glows like an autumn sunset. Phrasing and interplay are marvelous, and there's a certain rough quality necessary to Dvorak: refine this music too much and it loses its peasant qualities. The Stamitz brings us the rustic beauty of the Czech countryside. Stratton Rawson spent two pages on the Stamitz recordings of 10,12, 13, and 14 in May/June 1991---essential reading.
+In the quartets (especially the essential later ones, 10-14) three groups stand out above the others. The best---at full price-is the Stamitz Quartet on Bayer. They dig into the music with a power and sense of involvement unmatched on discs. Their playing glows like an autumn sunset. Phrasing and interplay are marvelous, and there's a certain rough quality necessary to  Dvořák: refine this music too much and it loses its peasant qualities. The Stamitz brings us the rustic beauty of the Czech countryside. Stratton Rawson spent two pages on the Stamitz recordings of 10,12, 13, and 14 in May/June 1991---essential reading.
 (Send \$1 for a copy.) 
 
 Almost as fine and a bit more polished are the recordings by the Panocha Quartet on
@@ -780,7 +784,7 @@ For the complete quartets at a fairly modest price, the DG box by the Prague Qua
 
 \section{Cypresses}
 
-The Cypresses was an early song cycle; Dvorak was in his 20s. The poems are "somewhat tearful and effeminate" (Hofmeister), but he always regarded the music with affection.
+The Cypresses was an early song cycle;  Dvořák was in his 20s. The poems are "somewhat tearful and effeminate" (Hofmeister), but he always regarded the music with affection.
 Some of the tunes turned up in his piano Silhouettes of 1879; He arranged all 12 of them for string quartet in 1887, and that's what we usually hear. They are too unvaried in mood to be played in concert, but they are easy to play for amateur quartets and turn out to be easy listening as well---good for fillers on the radio or for background while you work at your computer. You will stop occasionally to admire a particularly lovely one, but this is not profound music.
 
 Besides the "normal" arrangement for string quartet, there is a further arrangement for a larger group ot strings July/Aug 1998).
@@ -820,9 +824,9 @@ Firkusny, Ridge & RCA 60436
 
 \section{Bagatelles}
 
-There is a Dvorak work called Bagatelles (Opus
+There is a  Dvořák work called Bagatelles (Opus
 47), and it has been recorded eight or ten times. It's for string quartet and harmonium.
-The old Vienna Octet version on LP is not available at the moment, but the one with the Alberni Quartet is, and it's very bright and cheerful. That disc includes other bagatelles: the Opus 75 Romantic Pieces (originally also called bagatelles), in the original version for two violins and viola; the Terzetto for the same combination, and some waltzes. An attractive program. Another attractive program was on Supraphon 0664: small orchestral pieces like waltzes and polkas led by Jiri Belohlavek 
+The old Vienna Octet version on LP is not available at the moment, but the one with the Alberni Quartet is, and it's very bright and cheerful. That disc includes other bagatelles: the Opus 75 Romantic Pieces (originally also called bagatelles), in the original version for two violins and viola; the Terzetto for the same combination, and some waltzes. An attractive program. Another attractive program was on Supraphon 0664: small orchestral pieces like waltzes and polkas led by Jiri Bělohlávek 
 
 \st
 Alberni Qt & CRD 3457
@@ -830,7 +834,7 @@ Alberni Qt & CRD 3457
 
 \section*{}
 
-NOTE: Some Dvorak chamber pieces were covered in other overviews: 
+NOTE: Some  Dvořák chamber pieces were covered in other overviews: 
 Trio 3 and Piano Quintet-May/June 1997; Quartet 12
 (American-Sept/Oct 1997)
 
