--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -222,7 +222,7 @@ London Sym/Kertesz & London set (NA)
 \section{Symphony 4}
 
 This is less smooth and flowing than \No3. It has two striking Dvořák rhythms
-and two gorgeous flowing melodies. You get one of each in I; the rhythm is TA-ta-tum-te-DUM. II is a long theme with variations---very Wagnerian; it is not very original, but it's his best slow movement so far. Ill is a swaggering scherzo-village music. Then comes the repetitious IV, where the first theme is another Dvořák rhythm---rum-tum, RUM-ti-tum---heard 17 times---and the second one of his trademark flowing melodies. The overall
+and two gorgeous flowing melodies. You get one of each in I; the rhythm is TA-ta-tum-te-DUM. II is a long theme with variations---very Wagnerian; it is not very original, but it's his best slow movement so far. III is a swaggering scherzo-village music. Then comes the repetitious IV, where the first theme is another Dvořák rhythm---rum-tum, RUM-ti-tum---heard 17 times---and the second one of his trademark flowing melodies. The overall
 impression when you've heard it all is of exuberant grandeur---and maybe that's a good description of Dvořák's music in general.
 
 The Kertesz stood alone for years as the only really good recording. It's quite bracing and will always be worth hearing. At this stage Kertesz's scherzo is still the most exciting. The Kubelik was no particular threat: Carl Bauman calls it turgid; I call it jumpy: the scherzo seems especially lumpy, and the second theme of the finale is especially jittery---has no repose. There is more bounce and surge and bump than flow in Kubelik's Fourth. The Järvi is no threat either---soggy and boring.
