--- a/arg/tchaikovsky.tex
+++ b/arg/tchaikovsky.tex
@@ -270,7 +270,7 @@ More than 50 years after they were etched into wax, Koussevitzky's classic Tchai
 There's a sense of discovery and wonder at every turn---not to mention a raw emotional power that's paradoxically coupled with patrician nobility and refinement. His tempos are all over the road, yet they've been so carefully chosen that the music flows naturally and with inexorable logic. Climaxes are titanic, explosive.
 The Pathetique was recorded first. There's still a hint of portamento in the strings, making the music even more poignant and touching.
 The black darkness of the basses at the end of
-IV is devastating. Symphonies 4 and 5 are bracing, dramatic, and almost overwhelming in their intensity, and the orchestral execution is staggering even by today's standards. Sound is clear and rich---above average for the era (1930-44). BSO Classics has the cleanest transfer of 5, except in lI, which Biddulph took from a near-pristine set of 45 RPM discs (same performance). Avoid the RCA Pathetique; an unapproved take of one side of IV was used.
+IV is devastating. Symphonies 4 and 5 are bracing, dramatic, and almost overwhelming in their intensity, and the orchestral execution is staggering even by today's standards. Sound is clear and rich---above average for the era (1930-44). BSO Classics has the cleanest transfer of 5, except in II, which Biddulph took from a near-pristine set of 45 RPM discs (same performance). Avoid the RCA Pathetique; an unapproved take of one side of IV was used.
 The outstanding 1949 Koussevitzky 4th is still locked up in RCA's vaults (the one on Biddulph is earlier).
 
 \medskip
